# eloquence-privacy

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE_ELOQUENCE_INTEGRATION_COMPLETE.md  CONFIGURATION_APPLICATION.md  DEPLOIEMENT_BACKEND.md  DEPLOIEMENT_BACKEND_GUIDE.md  DIAGNOSTIC_FINAL_RESOLUTION.md  DIAGNOSTIC_LIVEKIT_AUDIO_COMPLET.md  Desktop.  Desktop..pub  Dockerfile.agent  Dockerfile.asr  Dockerfile.tts  GUIDE_DEPLOIEMENT.md  GUIDE_UTILISATION_BACKEND.md  INSTRUCTIONS_GITHUB.md  INSTRUCTIONS_SERVER_REPO.md  MAINTENANCE_DOCKER.md  OFFLINE_COACHING_README.md  README-MCP-SERVERS.md  README.md  README_MAINTENANCE.md  VOLUME_CALIBRATION_README.md  check_all_mcp_servers.sh  cleanup-final.bat  cleanup.bat  cleanup.sh  create_room_test.py  deploy-backend-complete.sh  deploy-backend-fixed.sh  deploy-server-directory.sh  deploy-to-scaleway.sh  diagnostic_logs_agent.py  diagnostic_simple.py  docker-compose.complet-robuste.yml  docker-compose.yml  download-models.sh  (+46 more)
.roo/: mcp.json
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: whisper_wrapper.cpp
android/app/src/main/kotlin/com/eloquence/eloquence_frontend/: MainActivity.kt
android/app/src/main/kotlin/com/example/eloquence_flutter/: AzureSpeechApi.g.kt  AzureSpeechHandler.kt  MainActivity.kt
assets/animations/: README.md
assets/config/: app_config.json
assets/icons/: README.md
assets/lexique/: lexique_syllabes.json
audio_signal_processor/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
audio_signal_processor/android/: build.gradle  settings.gradle
audio_signal_processor/example/: README.md  analysis_options.yaml  pubspec.yaml
audio_signal_processor/ios/: audio_signal_processor.podspec
audio_signal_processor/lib/: audio_signal_processor.dart  audio_signal_processor_method_channel.dart  audio_signal_processor_platform_interface.dart
audio_signal_processor/test/: audio_signal_processor_method_channel_test.dart  audio_signal_processor_test.dart
backend/: .env  .env.backup  .env.celery  .env.example  Dockerfile  Dockerfile.agent  Dockerfile.robust  GUIDE_DIAGNOSTIC_ENV_DOCKER.md  app.py  app_flutter_standalone.py  app_wrapper.py  audio_utils_scipy.py  docker-compose.api.yml  docker-compose.modified.yml  entrypoint.py  livekit_agent_moderne.py  livekit_agent_simple.py  livekit_audio_handler.py  livekit_real_audio_handler.py  requirements.agent.txt  requirements.txt  requirements_agent.txt  start-agent.sh  start-backend.sh  test_asr.py  test_import.py  test_services.py  test_websocket.html  wsgi.py
documentation/: ANALYSE_DIAGNOSTIC_RESULTS.md  ARCHITECTURE_PROJET_ELOQUENCE.md  CORRECTIONS_LIVEKIT_APPLIQUEES.md  CORRECTIONS_PREVENTIVES_APPLIQUEES.md  CORRECTION_AUDIO_PIPELINE_COMPLETE.md  CORRECTION_AUDIO_SCENARIOS.md  CORRECTION_FINALE_APPLIQUEE.md  CORRECTION_LLM_401_ERROR.md  CORRECTION_MODE_SIMULATION.md  DIAGNOSTIC_LIVEKIT_COMPLET.md  GUIDE_DIAGNOSTIC_LOGS_COMPLET.md  GUIDE_FINAL_LIVEKIT_SOLUTION.md  GUIDE_FINAL_MAINTENANCE_BACKEND.md  GUIDE_MISE_A_JOUR_CLES_API_LIVEKIT.md  GUIDE_MISE_A_JOUR_DOCKER.md  LANCER_DIAGNOSTIC_LOGS.md  MODIFICATIONS_APPLIQUEES_LIVEKIT.md  NOUVEAUX_SCENARIOS_CREES.md  PROBLEMES_AUDIO_LIVEKIT.md  PROJECT_STRUCTURE_SCHEMA.md  README.md  REPARATION_BACKEND_COMPLETE.md  SOLUTION_DEFINITIVE_LIVEKIT.md  SOLUTION_FINALE_COMPLETE.md  SOLUTION_LIVEKIT_KEYS_FIXED.md  SOLUTION_PROBLEME_DATABASE_COMPLETE.md  diagnostic_logs_20252305_112158.txt  diagnostic_logs_20252305_112501.txt  diagnostic_logs_20252305_112758.txt  diagnostic_logs_20252305_113300.txt  diagnostic_logs_20252305_115053.txt
eloquence-backend/: app.py
eloquence_flutter/: README.md  analysis_options.yaml  pubspec.yaml
kaldi_gop_plugin/: README.md  pubspec.yaml
kaldi_gop_plugin/android/: CMakeLists.txt  build.gradle  settings.gradle
kaldi_gop_plugin/android/src/main/: AndroidManifest.xml
kaldi_gop_plugin/android/src/main/kotlin/com/example/kaldi_gop_plugin/: KaldiGopPlugin.kt  PronunciationResult.kt
kaldi_gop_plugin/android/src/test/kotlin/com/example/kaldi_gop_plugin/: KaldiGopPluginTest.kt
lib/: main.dart  test_supabase_mcp.dart
linux/: CMakeLists.txt
livekit/: docker-compose.simple.yml  docker-compose.yml  livekit-flutter.yaml
livekit_agent/: .env  coach_agent_eloquence_docker.py  requirements.txt
livekit_test_system/: DEMARRAGE_RAPIDE.bat  DEPANNAGE.md  INSTRUCTIONS_SIMPLES.txt  README.md  config_example.json  diagnostic.bat  install.bat  livekit_client.py  main.py  pipeline_logger.py  requirements.txt  run_tests.py  test_avec_bonnes_cles.py  test_coaching_vocal_complet.py  test_flutter_final.py  test_frontend_flutter.py  test_frontend_flutter_fixed.py  test_livekit.bat  test_orchestrator.py  test_realtime_diagnosis.py  test_simple.py  test_simple_fixed.py  test_streaming_reel.py  test_streaming_reel_fixed.py  voice_synthesizer.py
model_manager/: pubspec.yaml
pigeons/: azure_speech.dart
piper_tts_plugin/: README.md  pubspec.yaml
piper_tts_plugin/android/: CMakeLists.txt  build.gradle  piper_phonemize_toolchain.patch  settings.gradle
piper_tts_plugin/android/src/main/: AndroidManifest.xml
piper_tts_plugin/android/src/main/kotlin/com/example/piper_tts_plugin/: ModelManager.kt  PiperTtsPlugin.kt
piper_tts_plugin/android/src/test/kotlin/com/example/piper_tts_plugin/: PiperTtsPluginTest.kt
server/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
test/: widget_test.dart
web/: index.html  manifest.json
whisper_stt_plugin/: README.md  pubspec.yaml
whisper_stt_plugin/android/: CMakeLists.txt  build.gradle  settings.gradle
whisper_stt_plugin/android/src/main/: AndroidManifest.xml
whisper_stt_plugin/android/src/main/kotlin/com/example/whisper_stt_plugin/: ModelManager.kt  WhisperSttPlugin.kt
whisper_stt_plugin/android/src/test/kotlin/com/example/whisper_stt_plugin/: WhisperSttPluginTest.kt
windows/: CMakeLists.txt
(+554 files in other folders)
